# Arooz

./: CMakeLists.txt  CMakeLists.txt.user.62f69f5  Main.qml  main.cpp
ui/WindowContent/: OneAppLayout.qml  ThreeAppsLayout.qml  TwoAppsLayout.qml  WindowContent.qml
ui/WindowContent/Apps/DiagnosticsApp/: DiagnosticsApp.qml
ui/WindowContent/Apps/Maps/: Maps.qml
ui/WindowContent/Apps/MusicApp/: FeaturePermissionBar.qml  MusicApp.qml
ui/WindowContent/Apps/SettingsApp/: SettingsApp.qml
ui/WindowContent/Apps/SettingsApp/ContentPages/: ConnectionsContent.qml  SoftwareContent.qml
ui/leftBar/: LeftBar.qml
